--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "@architect/architect": "^10.11.2",
     "@architect/functions": "^5.4.0",
-    "performance-leaderboard": "^10.0.0",
-    "xml2json": "^0.12.0"
+    "node-fetch": "^3.3.1",
+    "xml2json-light": "^1.0.6"
   }
 }
